{
    "name": "InputActions",
    "maps": [
        {
            "name": "Touch",
            "id": "349d64f1-e93f-4328-ac8d-9e3384609019",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "d770ebed-10ca-425e-9123-18300697e93a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchRelease",
                    "type": "Button",
                    "id": "6140faa7-f8e5-458d-9e61-d7805f95bb72",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1,behavior=1)",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchDrag",
                    "type": "PassThrough",
                    "id": "f4cf3ee3-7732-4de6-9fc9-553af128b2f9",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "Hold(duration=0.05,pressPoint=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "4bf80022-c58e-46bf-abeb-a995998e2f2c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0a36ce15-0241-4337-a7b8-fce57b095655",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1949ee60-7edd-4db3-a10c-65881a393d1f",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f120d78-9200-4ca5-a118-8862740b7e46",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "515ed84a-8e93-4e38-95f6-06df8b8eb2b9",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}